--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 3.8)
 include(FetchContent)
 
+set(BUILD_SHARED_LIBS OFF)
+
 FetchContent_Declare(
   hidapi
   GIT_REPOSITORY https://github.com/libusb/hidapi.git
